# activity_recognition

./: CMakeLists.txt  README.md  moverio.txt  nodelet_plugins.xml  package.xml
activity_recognition/: build.gradle  settings.gradle
activity_recognition/activity_recognition_client/: build.gradle
activity_recognition/activity_recognition_client/src/main/: AndroidManifest.xml
activity_recognition/activity_recognition_client/src/main/java/com/github/kazuto1011/activity_recognition/activity_recognition_client/: ActivityRecognitionClient.java  ImagePublisher.java  Preview.java  ScreenCapturer.java  SpeechPublisher.java
activity_recognition/activity_recognition_client/src/main/res/layout/: main.xml
activity_recognition/activity_recognition_client/src/main/res/values/: strings.xml
activity_recognition/gradle/wrapper/: gradle-wrapper.properties
activity_recognition_server/: .gitignore  CMakeLists.txt  nodelet_plugins.xml  package.xml
activity_recognition_server/include/: Classifier.h  FeatureDescriptor.h  ServiceRobot.h  common.h
activity_recognition_server/launch/: activity_recognition.launch
activity_recognition_server/params/fisher_vector/: eigen.pca
activity_recognition_server/src/: Classifier.cpp  FeatureDescriptor.cpp  Nodelets.cpp  ServiceRobot.cpp  nodelet_server.cpp  vector_encoding.cpp  virtual_smartpal.cpp
activity_recognition_train/: README.md
activity_recognition_train/STIP_features/: STIP_features.sln
activity_recognition_train/STIP_features/STIP_features/: STIP_features.vcxproj  main.cpp  main.h
activity_recognition_train/video_svm/: video_svm.sln
activity_recognition_train/video_svm/classification/: classification.vcxproj  classification.vcxproj.filters  libsvm.h  main.cpp  main.h  vector_encoding.cpp  vector_encoding.h
activity_recognition_train/video_svm/svm_train/: libsvm.cpp  main.cpp  main.h  opencv_lib.h  svm_train.vcxproj  svm_train.vcxproj.filters  vector_encoding.cpp  vector_encoding.h
include/: AndroidDevice.h  Classifier.h  FeatureDescriptor.h  ServiceRobot.h  common.h  vector_encoding.h
launch/: activity_recognition.launch
params/bag_of_visual_words/: bovw.kmeans  eigen.pca  svm.model
params/fisher_vector/: eigen.pca  fisher.gmm
params/vlad/: eigen.pca  svm.model  vlad.kmeans
src/: AndroidDevice.cpp  AndroidDevice.h  Classifier.cpp  Classifier.h  FeatureDescriptor.cpp  Nodelets.cpp  ServiceRobot.cpp  ServiceRobot.h  activity_recognition_server.cpp  nodelet_server.cpp  server.cpp  vector_encoding.cpp  virtual_smartpal.cpp
video/: video_list.txt
